Header visibility fix

--- a/_sass/_ahh.scss
+++ b/_sass/_ahh.scss
@@ -36,7 +36,7 @@ font-size: 4rem;
 
 @media only screen and (max-width: $screen-sm) {
   h2.services {
-    font-size: 2rem;
+    font-size: 1.65rem;
   }
 }
 
